--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ steps:
 uses: actions/setup-java@v2
 with:
 java-version: '17'
-- name: Setup Mainframe Environment and Upload COBOL Check
+- name: Run COBOL Check on Mainframe
 env:
    ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
    ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
 run: |
-chmod +x .github/scripts/zowe_operations.sh
-.github/scripts/zowe_operations.sh
+chmod +x .github/scripts/mainframe_operations.sh
+.github/scripts/mainframe_operations.sh
