--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ steps:
 uses: actions/setup-java@v2
 with:
 java-version: '11'
-- name: Run COBOL Check on Mainframe
+- name: Setup Mainframe Environment and Upload COBOL Check
 env:
-   ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
-   ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
+ZOWE_USERNAME: ${{ secrets.ZOWE_USERNAME }}
+ZOWE_PASSWORD: ${{ secrets.ZOWE_PASSWORD }}
 run: |
-chmod +x .github/scripts/mainframe_operations.sh
-.github/scripts/mainframe_operations.sh
+chmod +x .github/scripts/zowe_operations.sh
+.github/scripts/zowe_operations.sh
